Fix(motorCycleComponent): Remove the horizontal scroll in motorCycleComponent
Fixing the position of the elements in - mapComponent - footerComponent - brandTrust

--- a/src/components/brandTrust/index.scss
+++ b/src/components/brandTrust/index.scss
@@ -41,6 +41,7 @@
     .swiper-wrapper{
         width: 100%;
         display: flex;
+        flex-direction: row-reverse;
         .swiper-slide{
             display: flex;
             justify-content: center;
@@ -67,6 +68,7 @@
     .section-brand{
         height: 117px;
         .swiper-wrapper{
+            flex-direction: row-reverse;
             .swiper-slide{
                 width: 120px;
                 height: 60px;
@@ -83,6 +85,7 @@
     .section-brand{
         height: 117px;
         .swiper-wrapper{
+            flex-direction: row-reverse;
             .swiper-slide{
                 width: 120px;
                 height: 60px;
@@ -99,6 +102,7 @@
     .section-brand{
         height: 200px;
         .swiper-wrapper{
+            flex-direction: row-reverse;
             .swiper-slide{
                 width: 264px;
                 height: 135px;
