--- a/src/components/footerComponent/index.scss
+++ b/src/components/footerComponent/index.scss
@@ -70,7 +70,7 @@
             text-align: right;
             display: flex;
             flex-direction: column;
-            align-items: flex-end;
+            align-items: flex-start;
         }
         .col-title{
             font-weight: 600;
@@ -86,7 +86,7 @@
             color: var(--white-text);
             display: flex;
             flex-direction: column;
-            align-items: flex-end;
+            align-items: flex-start;
             gap: 10px;
         }
         .image-container{
@@ -103,7 +103,7 @@
     .row-images{
         height: 160px;
         display: flex;
-        justify-content: flex-end;
+        justify-content: flex-start;
         gap: 48px;
         .footer-imgsrc{
             width: 160px;
