--- a/src/components/motorCycleComponent/index.scss
+++ b/src/components/motorCycleComponent/index.scss
@@ -7,7 +7,6 @@ body {
   margin: 0;
 
   #breakMotor {
-    width: 100vw;
     height: 108px;
     @include display();
   }
@@ -16,7 +15,7 @@ body {
     height: 108px;
     @include display();
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
   }
   #road {
     width: 89vw;
